# atc-sim

./: .dockerignore  .gitattributes  .gitignore  DEPLOY.md  Dockerfile  README.md  app.py  build_pages.py  env_manifest.json  index.html  main.py  netlify.toml  params.py  pyproject.toml  requirements.txt  utils.py
auto_plan/: README.md  __init__.py  best.pt  flight_plan.py  model.py  planner.py  policy_config.json  rollout.py  runtime.py
bc_eval/: run_bc_eval.py
core/: aircraft.py  aircraft_spawner.py  collision_monitor.py
data/: egll_game.json
display/: generate_game_coordinates.py  pygame_display.py
docs/: env_manifest.json  index.html
dsl_parser/: __init__.py
dsl_parser_training/: .gitignore  README.md  __init__.py  augment.py  build_dataset.py  build_eval.py  eval_parser.py  generate_commands.py  modal_app.py  train.py  voices.py
environment/: utils.py
heuristics_multiple/: __init__.py  eval.py  flight_plan.py  modal_eval.py  rollout.py
rl_bc/: __init__.py  config.py  data.py  modal_config.py  modal_eval.py  modal_train.py  train.py
rl_multiple/: __init__.py  _spawn_fair_multi.py  compare_eval.py  config.py  critic.py  delta_head.py  density.py  env.py  eval_fair.py  eval_io.py  eval_runner.py  handoff.py  modal_compare_eval.py  modal_config.py  modal_continuous.py  modal_eval_fair.py  modal_sanity_eval.py  multi_env.py  policy.py  rollout.py  runtime.py  train.py
rl_ppo/: __init__.py  best.pt  config.py  critic.py  env.py  eval_metrics.py  eval_runner.py  gae.py  loop_detector.py  modal_config.py  modal_continuous.py  modal_sanity_eval.py  (+5 more)
(+76 files in other folders)
