[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "atc-sim"
version = "0.1.0"
description = "Air Traffic Control Simulator built with Pygame"
readme = "README.md"
authors = [{ name = "Your Name" }]
requires-python = ">=3.8"
dependencies = [
    "pygame>=2.5"
]

[project.scripts]
atc-sim = "atc_sim.main:main"